kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    app: helloworld
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
      name: http
  type: LoadBalancer
  selector:
    app: helloworld
